<resources>
    <string name="app_name">SBIS Design</string>
    <string name="sandbox">Sandbox</string>
    <string name="scroll_to_top">Scroll To The Top</string>
    <string name="context_menu">Context menu</string>
    <string name="sbis_container">Sbis container</string>
    <string name="hall_scheme">Hall Scheme</string>
    <string name="input_text_box">InputTextBox</string>
    <string name="single_selection">Single selection</string>
    <string name="multi_selection">Multi selection</string>
    <string name="single_recipient_selection">Single recipient selection</string>
    <string name="multi_recipient_selection">Multi recipient selection</string>
    <string name="multi_recipient_selection_common_api">Multi recipient selection (common API)</string>
    <string name="selection_preview">Selection Preview</string>
    <string name="navigation">Navigation</string>
    <string name="app_bar">App bar</string>
    <string name="folders_view">Folders</string>
    <string name="folders_viewmodel">Folders ViewModel</string>
    <string name="current_folder_view">Current folder view</string>
    <string name="cloud_view">Cloud view</string>
    <string name="pin_code">Pin Code</string>
    <string name="skeleton_view">Skeleton view</string>
    <string name="combined_multiselection">Combined Multiselection</string>
    <string name="title_view">Title view</string>
    <string name="title_date_header">Date Header</string>
    <string name="bottom_navigation_news">Новости</string>
    <string name="bottom_navigation_contacts">Контакты</string>
    <string name="bottom_navigation_messages">Сообщения</string>
    <string name="bottom_navigation_notifications">События</string>
    <string name="bottom_navigation_persons">Сотрудники</string>
    <string name="bottom_navigation_random_badge_count">Random badge count</string>
    <string name="bottom_navigation_clear_badge_count">Clear badge count</string>
    <string name="bottom_navigation_auto_hide">Auto hide bottom navigation</string>
    <string name="bottom_navigation_one_or_three_buttons">One/three floating buttons</string>
    <string name="floating_button_cancel">Отказ</string>
    <string name="floating_button_payment">Оплата</string>
    <string name="scheme_refresh">Refresh</string>
    <string name="text_with_icon_hint">С рамкой, иконкой и очисткой</string>
    <string name="text_with_frame_hint">С рамкой</string>
    <string name="text_with_clear_hint">С очисткой</string>
    <string name="disabled">Disabled</string>
    <string name="error">Error</string>
    <string name="text">Text</string>
    <string name="multiline_cap_sentences">Multiline + Cap</string>
    <string name="number">Number</string>
    <string name="min_lines">Мин. строк</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="max_lines">Макс. строк</string>
    <string name="navigation_notifications">События</string>
    <string name="navigation_notifications_reduced">Событ.</string>
    <string name="navigation_messages">Сообщения</string>
    <string name="navigation_calendar">Календарь</string>
    <string name="navigation_disk">Диск</string>
    <string name="navigation_address">Адрес</string>
    <string name="navigation_info">Информация</string>
    <string name="navigation_info_short">Инфор.</string>
    <string name="navigation_task">Задачи на мне</string>
    <string name="navigation_task_long">Задачи на мне задачи на мне задачи на мне</string>
    <string name="navigation_task_vertical">Задачи</string>
    <string name="navigation_task_horizontal">Задач.</string>
    <string name="navigation_favorites">Избранные</string>
    <string name="navigation_call">Звонок</string>
    <string name="navigation_kassa">Касса</string>
    <string name="navigation_news">Новости</string>
    <string name="navigation_statistics">Статистика</string>
    <string name="navigation_contacts">Контакты</string>
    <string name="navigation_settings">Настройки</string>
    <string name="navigation_contractors">Контракты</string>
    <string name="navigation_current_date">Сегодня</string>
    <string name="navigation_tasks_from_me">от меня</string>
    <string name="navigation_tasks_from_me_long">от меня от меня от меня от меня от меня</string>
    <string name="accordion_name">Аккордеон</string>
    <string name="bottom_menu_name">ННП</string>
    <string name="navigation_username">Хурма А.Р.</string>
    <string name="navigation_click_accordion_header_text">Клик на заголовок аккордеона</string>
    <string name="navigation_click_accordion_username_text">Клик на название пользователя в подвале аккордеона</string>
    <string name="navigation_click_menu_btn_text">Клик по кнопке меню</string>
    <string name="navigation_menu_click_btn">Самому обробатывать клик по кнопке Меню</string>
    <string name="navigation_add_tab">Добавить таб Сообщения</string>
    <string name="navigation_remove_tab">Удалить таб Сообщения</string>
    <string name="navigation_show_tab">Показать таб События</string>
    <string name="navigation_hide_tab">Скрыть таб События</string>
    <string name="navigation_change_tab_icon">Изменить иконку таба Календарь</string>
    <string name="navigation_randomize_counters">Обновить счетчики</string>
    <string name="navigation_pin_tab_nav_view">Зафиксировать ННП</string>
    <string name="navigation_switch_counter">Включить счетчик у меню Диск</string>
    <string name="navigation_switch_dark_theme">Включить темную тему</string>
    <string name="navigation_set_long_title">Задать длинный заголовок</string>
    <string name="navigation_set_long_subitem_title">Задать длинный заголовок подпункта</string>
    <string name="navigation_content_counter_start">Старт</string>
    <string name="navigation_content_counter_stop">Стоп</string>
    <string name="navigation_content_counter_default_value">0</string>
    <string name="user_0_name">Иванов Иван</string>
    <string name="user_0_statement">какое-то описание первого пользователя</string>
    <string name="user_0_icon">@string/design_mobile_icon_auto</string>
    <string name="context_menu_demo_top_left">Верх лево</string>
    <string name="context_menu_demo_top_right">Верх право</string>
    <string name="context_menu_demo_bottom_left">Низ лево</string>
    <string name="context_menu_demo_bottom_right">Низ право</string>
    <string name="context_menu_demo_center">Середина</string>
    <string name="input_view_single_line_simple_title" translatable="false">Single line simple text</string>
    <string name="input_view_single_line_simple_placeholder" translatable="false">Input single line simple text</string>
    <string name="input_view_single_line_simple_read_only" translatable="false">Read only</string>
    <string name="input_view_single_line_simple_clear" translatable="false">Clear button</string>
    <string name="input_view_single_line_simple_length_title" translatable="false">Single line simple text length</string>
    <string name="input_view_single_line_simple_length_link" translatable="false">Apply</string>
    <string name="input_view_password_title" translatable="false">Password</string>
    <string name="input_view_password_placeholder" translatable="false">Input password</string>
    <string name="input_view_password_link" translatable="false">Forgot?</string>
    <string name="input_view_password_validation_default_title" translatable="false">No validation</string>
    <string name="input_view_password_validation_error_title" translatable="false">Error</string>
    <string name="input_view_password_validation_warning_title" translatable="false">Warning</string>
    <string name="input_view_password_validation_success_title" translatable="false">Success</string>
    <string name="input_view_money_title" translatable="false">Money</string>
    <string name="input_view_money_placeholder" translatable="false">Input money</string>
    <string name="input_view_money_decorated" translatable="false">Decorated</string>
    <string name="input_view_money_zero_fraction_title" translatable="false">0</string>
    <string name="input_view_money_one_fraction_title" translatable="false">1</string>
    <string name="input_view_money_two_fraction_title" translatable="false">2</string>
    <string name="input_view_date_and_time_title" translatable="false">Date/Time</string>
    <string name="input_view_date_only_title" translatable="false">Date</string>
    <string name="input_view_time_only_title" translatable="false">Time</string>
    <string name="input_view_phone_title" translatable="false">Phone</string>
    <string name="input_view_phone_placeholder" translatable="false">Input phone</string>
    <string name="input_view_number_title" translatable="false">Number</string>
    <string name="input_view_number_placeholder" translatable="false">Input number</string>
    <string name="input_view_mask_title" translatable="false">Strange mask</string>
    <string name="input_view_mask_mask" translatable="false">!6E(***)-(000)+AAA</string>
    <string name="input_view_value_selection_title" translatable="false">Value selection</string>
    <string name="input_view_multiline_title" translatable="false">Multiline text</string>
    <string name="input_view_multiline_placeholder" translatable="false">Input multiline text</string>
</resources>